[DOC] 불필요한 문서 삭제: CQRS & Event Sourcing 및 데이터베이스 선택 분석 관련
docs/cqrs-event-sourcing-architecture.md: CQRS와 Event Sourcing 설명 문서 삭제
docs/database-selection-analysis.md: 데이터베이스 옵션 분석 문서 삭제
docs/exception-handling-guide.md: 예외 처리 가이드 문서 삭제
docs/ISSUE_GUIDE.md: 이슈 작성 가이드 문서 삭제
docs/kafka-event-ordering-strategy.md: Kafka 이벤트 처리 전략 문서 삭제

참고: 프로젝트 요구사항 변경으로 관련 문서 제거

Signed-off-by: ddingjoo <ddingsha9@teambind.co.kr>